--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,4 +1,4 @@
-<div class="ro">
+<div class="row">
   <div class="col-xs-12">
     <form>
       <div class="col-sm-5 form-group">
@@ -13,6 +13,8 @@
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit"> Add </button>
           <button class="btn btn-danger" type="button"> Delete </button>
+          <button class="btn btn-primary" type="button"> Clear </button>
+
 
         </div>
       </div>
