--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,19 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
+    <img
+      [src]="recipe.imagePath"
+      alt=" {{ recipe.name }}"
+      class="img-responsive"
+      style="max-height: 200px"
+    />
+    <!-- property binding and string interpolation -->
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
+    <!-- string interpolation -->
   </div>
 </div>
 <div class="row">
@@ -17,19 +24,14 @@
       <ul class="dropdown-menu">
         <li><a href="#"> To Shopping List</a></li>
         <li><a href="#"> Edit Recipe</a></li>
-
         <li><a href="#"> Delete recipe</a></li>
       </ul>
     </button>
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    Description
-  </div>
+  <div class="col-xs-12">Description {{ recipe.description }}</div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    Ingredients
-  </div>
+  <div class="col-xs-12">Ingredients</div>
 </div>
