--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,7 +5,8 @@
     ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail *ngIf="selectedRecipe; else infoText">
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText"
+    [recipe]="selectedRecipe">
     </app-recipe-detail>
     <ng-template #infoText>
       <p>Please select a recipe</p>
