--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,8 @@
         <li><a href="#" (click)="onSelect('shoppinglist')"> SHOPPING LIST</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+        <li class="dropdown"
+        appDropdown>
           <a href="#" class="dropdown-toggle" role="button">
             Manage <span class="caret"></span
           ></a>
