--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#"> To Shopping List</a></li>
+        <li><a href="#" (click)="onAddToShoppingList()"> To Shopping List</a></li>
         <li><a href="#"> Edit Recipe</a></li>
         <li><a href="#"> Delete recipe</a></li>
       </ul>
@@ -34,5 +34,11 @@
   <div class="col-xs-12">Description {{ recipe.description }}</div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
+  </div>
 </div>
