--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,39 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
-      <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+      <button
+        type="button"
+        class="navbar-toggle"
+        (click)="collapsed = !collapsed"
+      >
+        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
       </button>
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
-    <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+    <div
+      class="navbar-collapse"
+      [class.collapse]="collapsed"
+      (window:resize)="collapsed = true"
+    >
       <ul class="nav navbar-nav">
-        <li>
-          <a href="#" (click)="onSelect('recipe')"> RECIPES</a>
+        <li routerLinkActive="active">
+          <a routerLink="/recipes"> RECIPES</a>
         </li>
-        <li><a href="#" (click)="onSelect('shoppinglist')"> SHOPPING LIST</a></li>
+        <li routerLinkActive="active">
+          <a routerLink="/shopping-list"> SHOPPING LIST</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown"
-        appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">
+        <li class="dropdown" appDropdown>
+          <a style="cursor:pointer"class="dropdown-toggle" role="button">
             Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
             <li>
-              <a href="#"> Save data</a>
+              <a style="cursor:pointer"> Save data</a>
             </li>
             <li>
-              <a href="#"> Fetch data</a>
+              <a style="cursor:pointer"> Fetch data</a>
             </li>
           </ul>
         </li>
