--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -30,13 +30,14 @@
               id="imagePath"
               class="form-control"
               formControlName="imagePath"
+              #imagePath
             />
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img   alt="img-responsive" />
+          <img [src]="imagePath.value" width="600px" height="400px"  alt="img-responsive" />
         </div>
       </div>
       <div class="row">
