--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,9 @@
           <a routerLink="/recipes"> RECIPES</a>
         </li>
         <li routerLinkActive="active">
+          <a routerLink="/auth"> AUTHENTICATE</a>
+        </li>
+        <li routerLinkActive="active">
           <a routerLink="/shopping-list"> SHOPPING LIST</a>
         </li>
       </ul>
