--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <div *ngIf="isLoading">
+    <div *ngIf="isLoading" style="text-align: center;">
+      <div class="alert alert-danger" *ngIf="error">
+
+        {{error}}
+      </div>
       <app-loading-spinner></app-loading-spinner>
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
