--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,15 +1,14 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <div class="alert alert-danger" *ngIf="error">
+      <p>{{ error }}</p>
+    </div>
     <div *ngIf="isLoading" style="text-align: center;">
-      <div class="alert alert-danger" *ngIf="error">
-
-        {{error}}
-      </div>
       <app-loading-spinner></app-loading-spinner>
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
       <div class="form-group">
-        <label for="email">E-mail</label>
+        <label for="email">E-Mail</label>
         <input
           type="email"
           id="email"
@@ -38,11 +37,11 @@
           type="submit"
           [disabled]="!authForm.valid"
         >
-          {{ isLoginMode ? "Login" : "Sign Up" }}
+          {{ isLoginMode ? 'Login' : 'Sign Up' }}
         </button>
         |
-        <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
-          {{ isLoginMode ? "Sign Up" : "Login" }}
+        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">
+          Switch to {{ isLoginMode ? 'Sign Up' : 'Login' }}
         </button>
       </div>
     </form>
