--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,18 +16,21 @@
       (window:resize)="collapsed = true"
     >
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
-          <a routerLink="/recipes"> RECIPES</a>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/recipes" > RECIPES</a>
         </li>
-        <li routerLinkActive="active">
-          <a routerLink="/auth"> AUTHENTICATE</a>
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/auth" > AUTHENTICATE</a>
         </li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list"> SHOPPING LIST</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated">
+          <a style="cursor:pointer">Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor:pointer"class="dropdown-toggle" role="button">
             Manage <span class="caret"></span
           ></a>
