--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+    <form [formGroup]="shopForm">
       <div class="col-sm-5 form-group">
         <label for="name"> Name</label>
         <input
@@ -8,27 +8,44 @@
           id="name"
           class="form-control"
           name="name"
-          ngModel
           required
+          formControlName="name"
         />
       </div>
       <div class="col-sm-2 form-group">
-        <label for="amount"> Amount</label>
+        <label for="amount"> Amount </label>
         <input
           type="number"
           id="amount"
           class="form-control"
+          formControlName="amount"
           name="amount"
           required
-          ngModel
           [pattern]="'^[1-9]+[0-9]*$'"
         />
       </div>
+
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editMode? 'Update': 'Add'}}</button>
-          <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="editMode">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="!shopForm.valid"
+            (click)="onAddItem()"
+          >
+            {{ editMode ? "Update" : "Add" }}
+          </button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            (click)="onDelete()"
+            *ngIf="editMode"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
