--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,16 +1,20 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit> </app-shopping-edit>
+    <app-shopping-edit [editedItem]="editedItem" [editMode]="editMode"> </app-shopping-edit>
 
     <ul class="list-group">
       <a
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingredient of (ingredients | async).ingredients let i = index"
+        *ngFor="
+          let ingredient of (ingredients$ | async);
+          let i = index
+        "
         (click)="onEditItem(i)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
+      <!-- {{ingredients$ | async}} -->
     </ul>
   </div>
 </div>
