--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-xs-12">
     <img
-      [src]="recipe.imagePath"
-      alt=" {{ recipe.name }}"
+      [src]="recipeObject.imagePath"
+      [alt]=" recipeObject.name "
       class="img-responsive"
       style="max-height: 200px"
     />
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
+    <h1>{{ recipeObject.name }}</h1>
     <!-- string interpolation -->
   </div>
 </div>
@@ -31,12 +31,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Description {{ recipe.description }}</div>
+  <div class="col-xs-12">Description {{ recipeObject.description }}</div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+      <li class="list-group-item" *ngFor="let ingredient of recipeObject.ingredients">
         {{ingredient.name}} - {{ingredient.amount}}
       </li>
     </ul>
