--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -6,8 +6,8 @@ class="list-group-item clearfix">
   </div>
   <span class="pull-right">
     <img
-      src="{{ recipe.imagePath }}"
-      alt="{{ recipe.name }}"
+    [src]="recipe.imagePath"
+    [alt]="recipe.name"
       class="img-responsive"
       style="max-height: 50px"
     />
