--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (recipe)="onRecipeSelected($event)"></app-recipe-list>
   </div>
   <div class="col-md-7">
     <!-- <app-recipe-detail
@@ -11,6 +11,8 @@
     <ng-template #infoText>
       <p>Please select a recipe</p>
     </ng-template> -->
-    <router-outlet></router-outlet>
+    <app-recipe-detail [recipeObject]="selectedRecipe"> </app-recipe-detail>
+
+    <!-- <router-outlet></router-outlet> -->
   </div>
 </div>
