--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <img
       [src]="recipeObject.imagePath"
-      [alt]=" recipeObject.name "
+      [alt]="recipeObject.name"
       class="img-responsive"
       style="max-height: 200px"
     />
@@ -23,21 +23,34 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a style="cursor:pointer"(click)="onAddToShoppingList()"> To Shopping List</a></li>
-        <li><a style="cursor:pointer" (click)="onEditRecipe()"> Edit Recipe</a></li>
-        <li><a style="cursor:pointer" (click)="onDeleteRecipe()"> Delete recipe</a></li>
+        <li>
+          <a style="cursor: pointer" (click)="onAddToShoppingList()">
+            To Shopping List</a
+          >
+        </li>
+        <li>
+          <a style="cursor: pointer" (click)="onEditRecipe()"> Edit Recipe</a>
+        </li>
+        <li>
+          <a style="cursor: pointer" (click)="onDeleteRecipe()">
+            Delete recipe</a
+          >
+        </li>
       </ul>
     </div>
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Description {{ recipeObject.description }}</div>
+  <div class="col-xs-12">{{ recipeObject.description }}</div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipeObject.ingredients">
-        {{ingredient.name}} - {{ingredient.amount}}
+      <li
+        class="list-group-item"
+        *ngFor="let ingredient of recipeObject.ingredients"
+      >
+        {{ ingredient.name }} - {{ ingredient.amount }}
       </li>
     </ul>
   </div>
